<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:checkableBehavior="single"
        android:title="@string/protection">

        <item
            android:id="@+id/nav_face_reco"
            android:icon="@drawable/ic_face"
            android:title="@string/face_recognition"
            android:visible="false" />
        <item
            android:id="@+id/nav_bio_sendsor"
            android:icon="@drawable/ic_fingerprint"
            android:title="@string/biometric_authentication" />
        <item
            android:id="@+id/nav_pin"
            android:checked="true"
            android:icon="@drawable/ic_dialpad"
            android:title="@string/pin" />
    </group>
    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_actvate"
                android:icon="@drawable/ic_checked"
                android:title="@string/activate" />
            <item
                android:id="@+id/nav_encrol_face"
                android:icon="@drawable/ic_enroll_face"
                android:title="@string/enrol_your_face"
                android:visible="false" />
            <item
                android:id="@+id/nav_change_pin"
                android:icon="@drawable/ic_dialpad"
                android:visible="false"
                android:title="@string/change_pin" />
            <item
                android:id="@+id/nav_deavtivate"
                android:icon="@drawable/ic_cross"
                android:title="@string/deactivate" />
            <item
                android:id="@+id/nav_get_info"
                android:icon="@drawable/ic_notification"
                android:title="@string/get_information"/>
        </menu>
    </item>
</menu>
